--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,8 +7,8 @@
 }
 
 .navbar-inverse {
-    background: #F4F7FE;
-    border-color: #F4F7FE;
+    background: #ffffff;
+    border-color: #ffffff;
 }
 
 .navbar-inverse-data-extractor {
@@ -28,7 +28,7 @@
 }
 
 .nav-links {
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 500;
     float: left;
     color: #000000 !important;
@@ -55,15 +55,15 @@
 }
 
 .right-link-navbar {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
-    color: #0955FF;
-    border: solid 2px #ffffff;
+    color: #1097F1;
     float: right;
-    line-height: 50px;
+    line-height: 40px;
     cursor: pointer;
     padding: 0 20px;
-    border: 2px solid #0955FF;
+    border: 2px solid #1097F1;
+    border-radius: 4px;
 }
 
 .right-link-navbar:hover {
@@ -115,7 +115,7 @@
 
 .yellow-circle-nav {
     padding: 5px 5px;
-    background-color: #4a72c8;
+    background-color: #FFDD00;
     border-radius: 20px;
     font-size: 5px;
     position: absolute;
